<resources>
    <string name="app_name">Jotto-game</string>
    <string name="welcome_message">Welcome to Jotto Game!</string>
    <string name="start_btn">Start!</string>
    <string name="jotto">JOTTO</string>
    <string name="todo">TODO</string>
    <string name="start_the_guessing_game">Start the guessing game!</string>
    <string name="can">can</string>
    <string name="you">you</string>
    <string name="guess">guess ?</string>

    <!-- Rules strings-->

    <string name="rules"> "The rules of the game are quite simple.\nBased on your preferences for word length and difficulty, a word is generated at random.\nYour task is to guess this word.\nAs a hint, information about your previous attempts with the number of matching letters will be displayed.\nHave a fun!"</string>
    <string name="helper_text">Different difficulty of the game depends on popularity of the secret word. The easy option guesses a simple well-known word, medium proposes harder and hard option - not popular and little known"</string>
    <string name="defaultLettersNumber"></string>
    <!-- Finish Activity strings -->
    <string name="finishHomeBtn">Home</string>
    <string name="sourceWord">word</string>
    <string name="numberOfAttempts">numberOfAttempts</string>
    <string name="gameResult">userWon</string>
    <string name="winMessage">Yeah, you did that!\nSpent %d hits and guessed %s word\nCat is proud of you^)</string>
    <string name="loseMessage">Nvm!\n Hidden word was %s word\nBetter luck next time^)</string>


    <!-- Validation messages  -->
    <string name="too_few">Too few letters</string>
    <string name="too_much">Too much letters</string>
    <string name="not_int">Enter integer number</string>

    <!-- Setup page strings-->
    <string name="number_of_letters_placeholder">Number of letters</string>
    <string name="letters">letters</string>

    <string name="difficulty_hint">Difficulty</string>
    <string name="difficulty">difficulty</string>

    <!-- Const numbers   -->
    <string name="default_letter">5</string>
    <string name="min_letter">3</string>
    <string name="max_letter">12</string>

    <string name="default_diff">Easy</string>
    <string name="medium_diff">Medium</string>
    <string name="hard_diff">Hard</string>


    <string name="type_word_here">Type word here</string>
    <string name="check">Check</string>
    <string name="textview">TextView</string>
    <string name="give_up">give up</string>
    <string name="can_you_guess_the_word">Can you guess the word?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="is_playing">is_playing</string>


</resources>